[gd_scene load_steps=2 format=3 uid="uid://c5lnguj236lcn"]

[ext_resource type="Script" path="res://ui/pause_menu/pause_menu.gd" id="1_fsv0p"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fsv0p")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -89.5
offset_right = 179.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ButtonVbox" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer/ButtonVbox"]
layout_mode = 2
text = "Resume"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer/ButtonVbox"]
layout_mode = 2
text = "Load"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/ButtonVbox"]
layout_mode = 2
text = "Save"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer/ButtonVbox"]
layout_mode = 2
text = "Quit To Menu"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer/ButtonVbox"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/ButtonVbox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonVbox/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonVbox/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonVbox/MenuButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonVbox/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonVbox/ExitButton" to="." method="_on_exit_button_pressed"]
